@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1145 2009/03/22 15:09:38 seb Exp $
+# $NetBSD: Makefile,v 1.1146 2009/04/11 22:44:02 sno Exp $
 #
 
 COMMENT=	Development utilities
@@ -485,7 +485,6 @@ SUBDIR+=	p5-Clone-PP
 SUBDIR+=	p5-Compress-PPMd
 SUBDIR+=	p5-Compress-Raw-Bzip2
 SUBDIR+=	p5-Compress-Raw-Zlib
-SUBDIR+=	p5-Compress-Zlib
 SUBDIR+=	p5-Config-Any
 SUBDIR+=	p5-Config-Auto
 SUBDIR+=	p5-Config-Find
@@ -608,9 +607,6 @@ SUBDIR+=	p5-IO-All
 SUBDIR+=	p5-IO-Capture
 SUBDIR+=	p5-IO-CaptureOutput
 SUBDIR+=	p5-IO-Compress
-SUBDIR+=	p5-IO-Compress-Base
-SUBDIR+=	p5-IO-Compress-Bzip2
-SUBDIR+=	p5-IO-Compress-Zlib
 SUBDIR+=	p5-IO-Digest
 SUBDIR+=	p5-IO-InSitu
 SUBDIR+=	p5-IO-Interactive
